# starry-vdso

./: Cargo.toml
src/: config.rs  embed.rs  lib.rs  update.rs  vdso.rs  vdso_time_data.rs
src/aarch64/: config.rs  vdso_data.rs
src/loongarch64/: config.rs  vdso_data.rs
src/riscv64/: config.rs  vdso_data.rs
src/x86_64/: config.rs  getcpu.rs  mod.rs  vdso_data.rs
